<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesvens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learm_description</name>
  <version>0.0.1</version>
  <description>URDF description for LeArm robot</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>   <!-- 如果你以后想用 xacro，现在不需要可以去掉 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
